--- a/index.html
+++ b/index.html
@@ -163,10 +163,10 @@
         <div class="column latest-vacancy">
             <h3>Latest Vacancy</h3>
             <ul>
-                <li><a href="www.google.com">click here to open google</a></li>
+                <li><a href="https://recruitment.itbpolice.nic.in/rect/index.php">click here for otr</a></li>
                 <li><a href="https://cisfrectt.cisf.gov.in/recruitment_latest/new_registration.php">CISF FIREMAN</a></li>
-                <li><a href="#">Vacancy 3</a></li>
-                <li><a href="#">Vacancy 4</a></li>
+                <li><a href="https://recruitment.itbpolice.nic.in/rect/index.php">click here for otr</a></li>
+                <li><a href="https://scholarship.up.gov.in/index.aspx">apply</a></li>
                 <li><a href="#">Vacancy 5</a></li>
                 <li><a href="#">Vacancy 6</a></li>
             </ul>
